@@ -9,6 +9,10 @@
     <%= f.label l(:enabled) %> <%= f.check_box :enabled %>
   </p>
   <p>
+    <%= f.label l(:newissuealerts_set_priority) %> <%= f.check_box :priority %>
+  </p>
+
+  <p>
     <%= f.submit l(:create) %>
   </p>
 </div>
